# lg

./: .gitignore  Cargo.toml  README.md
debian/: README.source  changelog  control  lg.1  lg.install  lg.manpages  rules
examples/: lg.example.toml
src/: main.rs
