[package]
name = "lg"
version = "0.1.0"
edition = "2021"
description = "A tiny universal command logger. Run any command prefixed with `lg` to log its output and metadata."
license = "MIT"
homepage = "https://github.com/Batyan45/lg"
repository = "https://github.com/Batyan45/lg.git"
readme = "README.md"
keywords = ["log", "cli", "tooling", "observability"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["process", "io-util", "rt-multi-thread", "macros", "time", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
home = "0.5"
hostname = "0.4"
flate2 = "1.0"
once_cell = "1.19"
